tools/compiler/OMRStatistics/doc/Errors Compiling OpenJ9 with Clang/i386/9
(Arch: I386): Compiling /home/sam/3openj9/openj9-openjdk-jdk9/build/linux-x86_64-normal-server-release/vm/compiler/trj9/x/codegen/X86HelperLinkage.cpp
/home/sam/3openj9/openj9-openjdk-jdk9/build/linux-x86_64-normal-server-release/vm/compiler/trj9/x/codegen/X86HelperLinkage.cpp:122:22: error: no member named 'r8' in 'TR::RealRegister'
   TR::RealRegister::r8,
   ~~~~~~~~~~~~~~~~~~^
/home/sam/3openj9/openj9-openjdk-jdk9/build/linux-x86_64-normal-server-release/vm/compiler/trj9/x/codegen/X86HelperLinkage.cpp:123:22: error: no member named 'r9' in 'TR::RealRegister'
   TR::RealRegister::r9,
   ~~~~~~~~~~~~~~~~~~^
/home/sam/3openj9/openj9-openjdk-jdk9/build/linux-x86_64-normal-server-release/vm/compiler/trj9/x/codegen/X86HelperLinkage.cpp:137:22: error: no member named 'r8' in 'TR::RealRegister'
   TR::RealRegister::r8,
   ~~~~~~~~~~~~~~~~~~^
/home/sam/3openj9/openj9-openjdk-jdk9/build/linux-x86_64-normal-server-release/vm/compiler/trj9/x/codegen/X86HelperLinkage.cpp:138:22: error: no member named 'r9' in 'TR::RealRegister'
   TR::RealRegister::r9,
   ~~~~~~~~~~~~~~~~~~^
/home/sam/3openj9/openj9-openjdk-jdk9/build/linux-x86_64-normal-server-release/vm/compiler/trj9/x/codegen/X86HelperLinkage.cpp:139:22: error: no member named 'r10' in 'TR::RealRegister'
   TR::RealRegister::r10,
   ~~~~~~~~~~~~~~~~~~^
/home/sam/3openj9/openj9-openjdk-jdk9/build/linux-x86_64-normal-server-release/vm/compiler/trj9/x/codegen/X86HelperLinkage.cpp:140:22: error: no member named 'r11' in 'TR::RealRegister'
   TR::RealRegister::r11,
   ~~~~~~~~~~~~~~~~~~^
/home/sam/3openj9/openj9-openjdk-jdk9/build/linux-x86_64-normal-server-release/vm/compiler/trj9/x/codegen/X86HelperLinkage.cpp:152:22: error: no member named 'xmm8' in 'TR::RealRegister'
   TR::RealRegister::xmm8,
   ~~~~~~~~~~~~~~~~~~^
/home/sam/3openj9/openj9-openjdk-jdk9/build/linux-x86_64-normal-server-release/vm/compiler/trj9/x/codegen/X86HelperLinkage.cpp:153:22: error: no member named 'xmm9' in 'TR::RealRegister'
   TR::RealRegister::xmm9,
   ~~~~~~~~~~~~~~~~~~^
/home/sam/3openj9/openj9-openjdk-jdk9/build/linux-x86_64-normal-server-release/vm/compiler/trj9/x/codegen/X86HelperLinkage.cpp:154:22: error: no member named 'xmm10' in 'TR::RealRegister'
   TR::RealRegister::xmm10,
   ~~~~~~~~~~~~~~~~~~^
/home/sam/3openj9/openj9-openjdk-jdk9/build/linux-x86_64-normal-server-release/vm/compiler/trj9/x/codegen/X86HelperLinkage.cpp:155:22: error: no member named 'xmm11' in 'TR::RealRegister'; did you mean 'xmm1'?
   TR::RealRegister::xmm11,
   ~~~~~~~~~~~~~~~~~~^~~~~
                     xmm1
/home/sam/3openj9/openj9-openjdk-jdk9/build/linux-x86_64-normal-server-release/vm/omr/compiler/x/i386/codegen/RealRegisterEnum.hpp:73:4: note: 'xmm1' declared here
   xmm1                    = 27,
   ^
/home/sam/3openj9/openj9-openjdk-jdk9/build/linux-x86_64-normal-server-release/vm/compiler/trj9/x/codegen/X86HelperLinkage.cpp:156:22: error: no member named 'xmm12' in 'TR::RealRegister'
   TR::RealRegister::xmm12,
   ~~~~~~~~~~~~~~~~~~^
/home/sam/3openj9/openj9-openjdk-jdk9/build/linux-x86_64-normal-server-release/vm/compiler/trj9/x/codegen/X86HelperLinkage.cpp:157:22: error: no member named 'xmm13' in 'TR::RealRegister'
   TR::RealRegister::xmm13,
   ~~~~~~~~~~~~~~~~~~^
/home/sam/3openj9/openj9-openjdk-jdk9/build/linux-x86_64-normal-server-release/vm/compiler/trj9/x/codegen/X86HelperLinkage.cpp:158:22: error: no member named 'xmm14' in 'TR::RealRegister'
   TR::RealRegister::xmm14,
   ~~~~~~~~~~~~~~~~~~^
/home/sam/3openj9/openj9-openjdk-jdk9/build/linux-x86_64-normal-server-release/vm/compiler/trj9/x/codegen/X86HelperLinkage.cpp:159:22: error: no member named 'xmm15' in 'TR::RealRegister'
   TR::RealRegister::xmm15,
   ~~~~~~~~~~~~~~~~~~^
/home/sam/3openj9/openj9-openjdk-jdk9/build/linux-x86_64-normal-server-release/vm/compiler/trj9/x/codegen/X86HelperLinkage.cpp:173:22: error: no member named 'r12' in 'TR::RealRegister'
   TR::RealRegister::r12,
   ~~~~~~~~~~~~~~~~~~^
/home/sam/3openj9/openj9-openjdk-jdk9/build/linux-x86_64-normal-server-release/vm/compiler/trj9/x/codegen/X86HelperLinkage.cpp:174:22: error: no member named 'r13' in 'TR::RealRegister'
   TR::RealRegister::r13,
   ~~~~~~~~~~~~~~~~~~^
/home/sam/3openj9/openj9-openjdk-jdk9/build/linux-x86_64-normal-server-release/vm/compiler/trj9/x/codegen/X86HelperLinkage.cpp:175:22: error: no member named 'r14' in 'TR::RealRegister'
   TR::RealRegister::r14,
   ~~~~~~~~~~~~~~~~~~^
/home/sam/3openj9/openj9-openjdk-jdk9/build/linux-x86_64-normal-server-release/vm/compiler/trj9/x/codegen/X86HelperLinkage.cpp:176:22: error: no member named 'r15' in 'TR::RealRegister'
   TR::RealRegister::r15,
   ~~~~~~~~~~~~~~~~~~^
/home/sam/3openj9/openj9-openjdk-jdk9/build/linux-x86_64-normal-server-release/vm/compiler/trj9/x/codegen/X86HelperLinkage.cpp:197:71: error: invalid application of 'sizeof' to an incomplete type 'const TR::RealRegister::RegNum []'
const size_t TR::X86HelperCallSite::NumberOfIntParamRegisters = sizeof(IntParamRegisters) / sizeof(IntParamRegisters[0]);
                                                                      ^~~~~~~~~~~~~~~~~~~
/home/sam/3openj9/openj9-openjdk-jdk9/build/linux-x86_64-normal-server-release/vm/compiler/trj9/x/codegen/X86HelperLinkage.cpp:208:19: error: invalid application of 'sizeof' to an incomplete type 'const TR::RealRegister::RegNum []'
        i < sizeof(TR::X86HelperCallSite::CalleeSavedRegisters) / sizeof(TR::X86HelperCallSite::CalleeSavedRegisters[0]);
                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/sam/3openj9/openj9-openjdk-jdk9/build/linux-x86_64-normal-server-release/vm/compiler/trj9/x/codegen/X86HelperLinkage.cpp:231:19: error: invalid application of 'sizeof' to an incomplete type 'const TR::RealRegister::RegNum []'
        i < sizeof(CallerSavedRegisters) / sizeof(CallerSavedRegisters[0]);
                  ^~~~~~~~~~~~~~~~~~~~~~
21 errors generated.
(Arch: I386): Compiling /home/sam/3openj9/openj9-openjdk-jdk9/build/linux-x86_64-normal-server-release/vm/compiler/trj9/x/codegen/X86PrivateLinkage.cpp
/home/sam/3openj9/openj9-openjdk-jdk9/build/linux-x86_64-normal-server-release/vm/compiler/trj9/x/codegen/X86PrivateLinkage.cpp:854:92: error: no member named 'r8' in 'TR::RealRegister'
         TR::RealRegister *descriptorReg = machine()->getX86RealRegister(TR::RealRegister::r8); // Must use r8 since we can do a stack overflow check and restart, and the overflow helper uses rdi
                                                                         ~~~~~~~~~~~~~~~~~~^
/home/sam/3openj9/openj9-openjdk-jdk9/build/linux-x86_64-normal-server-release/vm/compiler/trj9/x/codegen/X86PrivateLinkage.cpp:1108:70: error: no member named 'r8' in 'TR::RealRegister'
          paintReg = machine()->getX86RealRegister(TR::RealRegister::r8);
                                                   ~~~~~~~~~~~~~~~~~~^
2 errors generated.